dioxus-web-component-macro/tests/assets/failures/invalid_tag_missing_hyphen.rs
use dioxus::prelude::*;
use dioxus_web_component::web_component;

fn main() {
}

#[web_component]
fn Component(attr: String) -> Element {
    None
}
